# gnnsandbox-twindq-bench

./: .gcloudignore  .gitignore  AUTHORS  CLAUDE.md  GEMINI.md  INSTALL.md  README.md  install.sh  setenv.sh
benchmark/: .gitignore  README.md  pyproject.toml
benchmark/examples/golden_twin/: l3vpn-hub-spoke.json
benchmark/injector/: __init__.py  __main__.py  cli.py  ledger.py  loader.py  scenario.py  types.py
benchmark/injector/defects/: accuracy.py  base.py  completeness.py  consistency.py  cross_source.py  registry.py  uniqueness.py  validity.py
benchmark/injector/projector/: catalog.py  telemetry.py
benchmark/injector/snapshot/: from_spanner.py  from_yaml.py
benchmark/scenarios/: chaos.yaml  naming_drift.yaml  phantom_devices.yaml  stale_catalog.yaml  topology_mismatch.yaml
benchmark/tests/: conftest.py  test_defects_accuracy.py  test_defects_completeness.py  test_defects_consistency.py  test_defects_cross_source.py  test_defects_uniqueness.py  test_defects_validity.py  test_roundtrip.py  test_scenario.py
benchmark/tests/fixtures/: tiny_golden_twin.json
dashboard/: .gcloudignore  Dockerfile  cloudbuild.j2  pubspec.yaml
environment/: configconnector.j2  configsync.yaml  git.yaml  logsink.j2  (+3 more)
lib/: README.md  pyproject.toml
lib/src/agent_library/: __init__.py
lib/src/agent_library/agentmiddleware/: adk.py  client_proxy_tool.py  client_proxy_toolset.py  event_translator.py  execution_state.py  session_manager.py  utils.py
lib/src/agent_library/credentials/: creds.py  k8s.py
lib/src/agent_library/trace/: trace_context.py  trace_plugin.py
(+570 files in other folders)
