[project]
name = "twindq-bench"
version = "0.1.0"
description = "TwinDQ-Bench injector: generates labelled data-quality defects for a digital-twin system under test."
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.5",
  "pyyaml>=6.0",
  "pandas>=2.0",
]

[project.optional-dependencies]
spanner = ["google-cloud-spanner>=3.40"]
dev     = ["pytest>=8.0", "pytest-cov"]

[project.scripts]
benchmark-injector = "injector.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["injector*"]
