[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent_library"
version = "0.0.1"
authors = [
  { name="Your Name", email="you@example.com" },
]
description = "A shared library for network agents"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "google-auth",
    "google-adk==1.18.0",
    "google-cloud-container==2.61.0",
    "ag-ui-protocol==0.1.9",
    "kubernetes==33.1.0",
    "ruamel.yaml==0.18.15"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"
